# ESP32-S3_WebGPU

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.esp32-s3-devkitm-1
main/: CMakeLists.txt  blink_example_main.cpp  board_pins.hpp
main/devices/: led.c  led.cpp  led.hpp  led1.cpp  led1.hpp  led2.cpp  led2.hpp  rgb_led.cpp  rgb_led.hpp
main/drivers/: ethernet_driver.cpp  ethernet_driver.hpp  led_driver.cpp  led_driver.hpp  wifi_driver.cpp  wifi_driver.hpp
main/freertos/tasks/: blink_task.cpp  blink_task.hpp  ethernet_task.cpp  ethernet_task.hpp  monitor_task.cpp  monitor_task.hpp  task_blink.c  tasks.cpp  tasks.hpp  wifi_task.cpp  wifi_task.hpp
main/logging/: logger.cpp  logger.hpp
main/middleware/comm/: protocol.c  protocol.cpp  protocol.hpp
main/middleware/ethernet/: ethernet_driver.c  ethernet_driver.cpp  ethernet_driver.hpp
main/middleware/spi/: spi_driver.c  spi_driver.cpp  spi_driver.hpp
main/middleware/uart/: uart_driver.c  uart_driver.cpp  uart_driver.hpp
main/middleware/wifi/: wifi_driver.c  wifi_driver.cpp  wifi_driver.hpp
main/secrets/: wifi_secrets.hpp
main/secrets/Examples/: openssl_local.cnf.example  server_cert.pem.example  wifi_secrets.example.hpp
main/web/: http_server.c  http_server.cpp  http_server.hpp  https_server.cpp  https_server.hpp
main/web/web_pages/: control.js  index.html  style.css
tools/doom_webgpu/: build_webgpu_doom.sh  doomgeneric_webgpu.c
