idf_component_register(SRCS "blink_example_main.cpp"
                            "drivers/led_driver.cpp"
                            "drivers/wifi_driver.cpp"
                            "drivers/ethernet_driver.cpp"
                            "freertos/tasks/tasks.cpp"
                            "freertos/tasks/blink_task.cpp"
                            "freertos/tasks/wifi_task.cpp"
                            "freertos/tasks/ethernet_task.cpp"
                            "freertos/tasks/monitor_task.cpp"
                            "middleware/wifi/wifi_driver.cpp"
                            "middleware/uart/uart_driver.cpp"
                            "middleware/spi/spi_driver.cpp"
                            "middleware/ethernet/ethernet_driver.cpp"
                            "middleware/comm/protocol.cpp"
                            "web/http_server.cpp"
                            "devices/led.cpp"
                            "devices/led1.cpp"
                            "devices/led2.cpp"
                            "devices/rgb_led.cpp"
                       INCLUDE_DIRS "."
                       REQUIRES esp_wifi esp_netif nvs_flash esp_http_server)
